
Tue Aug 11 14:38:57 CEST 2009 Paolo Molaro <lupus@ximian.com>

	* metadata.c: more documentation for MonoType accessors.

2009-08-11  Raja R Harinath  <harinath@hurrynot.org>

	Fix incorrect size definitions where the tail array isn't a list
	of pointers
	* class-internals.h (MONO_SIZEOF_MARSHAL_TYPE): Use offsetof to
	define size.
	* domain-internals.h (MONO_SIZEOF_JIT_INFO): Likewise.
	* metadata.h (MONO_SIZEOF_TYPE): Likewise.
	* reflection.h (MONO_SIZEOF_CUSTOM_ATTR_INFO): Likewise.

2009-08-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* reflection.h:
	* reflection.c: MONO_SIZEOF_CUSTOM_ATTR_INFO.

2009-08-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* metadata.c:
	* loader.c:
	* metadata-internals.h:
	* method-builder.c:
	* reflection.c: use MONO_SIZEOF_METHOD_HEADER.

2009-08-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* cominterop.c:
	* metadata.c:
	* metadata.h:
	* loader.c:
	* marshal.c:
	* reflection.c: #define for sizeof in MonoType and
	MonoMethodSignature.

2009-08-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* domain.c:
	* domain-internals.h: add and use #define's instead of sizeof()
	for MonoJitInfo and MonoJitInfoTable.

2009-08-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* object.c:
	* class.h: use #define instead of sizeof() for MonoRemoteClass.

2009-08-10 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* metadata.c:
	* metadata.h:
	* object.c:
	* class-internals.h:
	* generic-sharing.c:
	* marshal.c: use a #define instead of sizeof() for a few
	structures that use a zero-length array.

2009-08-06  Rodrigo Kumpera  <rkumpera@novell.com>

	* object-internals.h (MonoReflectionMethodOnTypeBuilderInst): Add new fields
	to handle inflated generic methods.

	* appdomain.c: Bump corlib version.

	* reflection.c (mono_image_get_method_on_inst_token): Handle generic method
	instances.

	* reflection.c (fixup_method): Same

	* reflection.c (resolve_object): Same.
